if ( FREECADMBD_BUILD_SHARED )
    message( STATUS "[FreeCADMbD] Building shared library" )
    add_library(FreeCADMbD SHARED)
else()
    message( STATUS "[FreeCADMbD] Building static library" )
    add_library(FreeCADMbD STATIC)
endif()

set(FREECADMBD_SRC
        Abs.cpp
        AbsConstraint.cpp
        AccICKineNewtonRaphson.cpp
        AccICNewtonRaphson.cpp
        AccKineNewtonRaphson.cpp
        AccNewtonRaphson.cpp
        AllowZRotation.cpp
        AllowZRotationConstraintIqctJqc.cpp
        AngleJoint.cpp
        AngleZConstraintIJ.cpp
        AngleZConstraintIqcJc.cpp
        AngleZConstraintIqcJqc.cpp
        AngleZIecJec.cpp
        AngleZIeqcJec.cpp
        AngleZIeqcJeqc.cpp
        AnyGeneralSpline.cpp
        AnyPosICNewtonRaphson.cpp
        ArcSine.cpp
        ArcTan.cpp
        ArcTan2.cpp
        Arguments.cpp
        Array.cpp
        ASMTAllowRotation.cpp
        ASMTAngleIJ.cpp
        ASMTAngleIJz.cpp
        ASMTAngleJoint.cpp
        ASMTAnimationParameters.cpp
        ASMTAssembly.cpp
        ASMTAtPointJoint.cpp
        ASMTCompoundJoint.cpp
        ASMTConeConeContact.cpp
        ASMTConstantGravity.cpp
        ASMTConstantVelocityJoint.cpp
        ASMTConstraintSet.cpp
        ASMTContact.cpp
        ASMTCylConeContact.cpp
        ASMTCylCylContact.cpp
        ASMTCylindricalJoint.cpp
        ASMTCylSphJoint.cpp
        ASMTdAngleIJx.cpp
        ASMTdAngleIJy.cpp
        ASMTExtrusion.cpp
        ASMTFixedJoint.cpp
        ASMTForceIJ.cpp
        ASMTForceIJKi.cpp
        ASMTForceTorque.cpp
        ASMTForceTorqueGeneral.cpp
        ASMTForceTorqueInLine.cpp
        ASMTGearJoint.cpp
        ASMTGeneralMotion.cpp
        ASMTInLineJoint.cpp
        ASMTInPlaneJoint.cpp
        ASMTItem.cpp
        ASMTItemIJ.cpp
        ASMTJoint.cpp
        ASMTKinematicIJ.cpp
        ASMTLimit.cpp
        ASMTLineInPlaneJoint.cpp
        ASMTMarker.cpp
        ASMTMotion.cpp
        ASMTNoRotationJoint.cpp
        ASMTOmegaIJ.cpp
        ASMTOmegaIJKi.cpp
        ASMTParallelAxesJoint.cpp
        ASMTPart.cpp
        ASMTPerpendicularJoint.cpp
        ASMTPlanarJoint.cpp
        ASMTPointInLineJoint.cpp
        ASMTPointInPlaneJoint.cpp
        ASMTPrincipalMassMarker.cpp
        ASMTRackPinionJoint.cpp
        ASMTRefCurve.cpp
        ASMTRefItem.cpp
        ASMTRefPoint.cpp
        ASMTRefSurface.cpp
        ASMTRevCylJoint.cpp
        ASMTRevoluteJoint.cpp
        ASMTRevRevJoint.cpp
        ASMTrIJ.cpp
        ASMTrIJKi.cpp
        ASMTRotationalMotion.cpp
        ASMTRotationLimit.cpp
        ASMTScrewJoint.cpp
        ASMTSimulationParameters.cpp
        ASMTSpatialContainer.cpp
        ASMTSpatialItem.cpp
        ASMTSphericalJoint.cpp
        ASMTSphSphJoint.cpp
        ASMTSymbolicFunction.cpp
        ASMTSymbolicFunctionIJ.cpp
        ASMTSymbolicFunctionIJKi.cpp
        ASMTTime.cpp
        ASMTTorqueIJ.cpp
        ASMTTorqueIJKi.cpp
        ASMTTranslationalJoint.cpp
        ASMTTranslationalMotion.cpp
        ASMTTranslationLimit.cpp
        ASMTUniversalJoint.cpp
        ASMTvIJ.cpp
        ASMTvIJKi.cpp
        ASMTvrIJ.cpp
        AtPointConstraintIJ.cpp
        AtPointConstraintIqcJc.cpp
        AtPointConstraintIqcJqc.cpp
        AtPointConstraintIqctJqc.cpp
        AtPointJoint.cpp
        BackwardDifference.cpp
        BasicDAEIntegrator.cpp
        BasicIntegrator.cpp
        BasicQuasiIntegrator.cpp
        BasicUserFunction.cpp
        CADSymbolicFunction.cpp
        CADSystem.cpp
        CartesianFrame.cpp
        CompoundJoint.cpp
        Constant.cpp
        ConstantGravity.cpp
        ConstantVelocityJoint.cpp
        Constraint.cpp
        ConstraintIJ.cpp
        ConstraintSet.cpp
        ConstVelConstraintIJ.cpp
        ConstVelConstraintIqcJc.cpp
        ConstVelConstraintIqcJqc.cpp
        Cosine.cpp
        CylindricalJoint.cpp
        CylSphJoint.cpp
        DAECorrector.cpp
        DAEIntegrator.cpp
        DAngleXIecJec.cpp
        DAngleXIeqcJec.cpp
        DAngleXIeqcJeqc.cpp
        DAngleYIecJec.cpp
        DAngleYIeqcJec.cpp
        DAngleYIeqcJeqc.cpp
        DiagonalMatrix.cpp
        DifferenceOperator.cpp
        DifferentialAlgebraicEquationSolver.cpp
        DifferentiatedGeneralSpline.cpp
        DirectionCosineConstraintIJ.cpp
        DirectionCosineConstraintIqcJc.cpp
        DirectionCosineConstraintIqcJqc.cpp
        DirectionCosineConstraintIqctJqc.cpp
        DirectionCosineIecJec.cpp
        DirectionCosineIeqcJec.cpp
        DirectionCosineIeqcJeqc.cpp
        DirectionCosineIeqctJeqc.cpp
        DiscontinuityError.cpp
        DispCompIecJecIe.cpp
        DispCompIecJecKec.cpp
        DispCompIecJecKeqc.cpp
        DispCompIecJecO.cpp
        DispCompIeqcJecIe.cpp
        DispCompIeqcJecKeqc.cpp
        DispCompIeqcJecO.cpp
        DispCompIeqcJeqcIe.cpp
        DispCompIeqcJeqcKeqc.cpp
        DispCompIeqcJeqcKeqct.cpp
        DispCompIeqcJeqcO.cpp
        DispCompIeqctJeqcIe.cpp
        DispCompIeqctJeqcKeqct.cpp
        DispCompIeqctJeqcO.cpp
        DistanceConstraintIJ.cpp
        DistanceConstraintIqcJc.cpp
        DistanceConstraintIqcJqc.cpp
        DistanceConstraintIqctJqc.cpp
        DistancexyConstraintIJ.cpp
        DistancexyConstraintIqcJc.cpp
        DistancexyConstraintIqcJqc.cpp
        DistIecJec.cpp
        DistIeqcJec.cpp
        DistIeqcJeqc.cpp
        DistIeqctJeqc.cpp
        DistxyIecJec.cpp
        DistxyIeqcJec.cpp
        DistxyIeqcJeqc.cpp
        DistxyIeqctJeqc.cpp
        DynIntegrator.cpp
        EigenDecomposition.cpp
        EndFramec.cpp
        EndFrameqc.cpp
        EndFrameqccq.cpp
        EndFrameqct.cpp
        EndFrameqct2.cpp
        EulerAngles.cpp
        EulerAnglesDDot.cpp
        EulerAnglesDot.cpp
        EulerAngleszxz.cpp
        EulerAngleszxzDDot.cpp
        EulerAngleszxzDot.cpp
        EulerArray.cpp
        EulerConstraint.cpp
        EulerParameters.cpp
        EulerParametersDDot.cpp
        EulerParametersDot.cpp
        Exponential.cpp
        ExpressionX.cpp
        ExternalSystem.cpp
        Extrapolator.cpp
        FixedJoint.cpp
        ForceBasicqcComp.cpp
        ForceBasicqccqComp.cpp
        ForceBasicqccqVector.cpp
        ForceBasicqcsComp.cpp
        ForceBasicqcsVector.cpp
        ForceBasicqcVector.cpp
        ForceFunctionParser.cpp
        ForceTorqueAction.cpp
        ForceTorqueActionComp.cpp
        ForceTorqueActionInLine.cpp
        ForceTorqueActionKComp.cpp
        ForceTorqueActionOComp.cpp
        ForceTorqueActReact.cpp
        ForceTorqueActReactComp.cpp
        ForceTorqueActReactInLine.cpp
        ForceTorqueActReactKComp.cpp
        ForceTorqueActReactOComp.cpp
        ForceTorqueBasic.cpp
        ForceTorqueData.cpp
        ForceTorqueFunction.cpp
        ForceTorqueGeneral.cpp
        ForceTorqueIJ.cpp
        ForceTorqueInLine.cpp
        ForceTorqueItem.cpp
        ForceTorqueVector.cpp
        ForceTorqueZero.cpp
        ForceVector.cpp
        FullColumn.cpp
        FullMatrix.cpp
        FullMotion.cpp
        FullRow.cpp
        FullVector.cpp
        Function.cpp
        FunctionFromData.cpp
        FunctionParser.cpp
        Functions.cpp
        FunctionWithManyArgs.cpp
        FunctionX.cpp
        FunctionXcParameter.cpp
        FunctionXY.cpp
        GearConstraintIJ.cpp
        GearConstraintIqcJc.cpp
        GearConstraintIqcJqc.cpp
        GearJoint.cpp
        GEFullMat.cpp
        GEFullMatFullPv.cpp
        GEFullMatParPv.cpp
        GeneralSpline.cpp
        GESpMat.cpp
        GESpMatFullPv.cpp
        GESpMatFullPvPosIC.cpp
        GESpMatParPv.cpp
        GESpMatParPvMarko.cpp
        GESpMatParPvMarkoFast.cpp
        GESpMatParPvPrecise.cpp
        ICKineIntegrator.cpp
        IndependentVariable.cpp
        InLineJoint.cpp
        InPlaneJoint.cpp
        Integral.cpp
        Integrator.cpp
        IntegratorInterface.cpp
        Interpolator.cpp
        Item.cpp
        JointIJ.cpp
        KineIntegrator.cpp
        KinematicDotIJ.cpp
        Kinematic.cpp
        KinematicIJ.cpp
        LDUFullMat.cpp
        LDUFullMatParPv.cpp
        LDUFullMatParPvRobust.cpp
        LDUSpMat.cpp
        LDUSpMatParPv.cpp
        LDUSpMatParPvMarko.cpp
        LDUSpMatParPvPrecise.cpp
        LimitIJ.cpp
        LinearMultiStepMethod.cpp
        LineInPlaneJoint.cpp
        Ln.cpp
        Log10.cpp
        LogN.cpp
        MarkerFrame.cpp
        MatrixDecomposition.cpp
        MatrixGaussElimination.cpp
        MatrixLDU.cpp
        MatrixSolver.cpp
        MaximumIterationError.cpp
        MbDMath.cpp
        MbDSymbolicFunction.cpp
        MBDynAbsoluteForce.cpp
        MBDynAxialRotationJoint.cpp
        MBDynBlock.cpp
        MBDynBody.cpp
        MBDynClampGenel.cpp
        MBDynClampJoint.cpp
        MBDynControlData.cpp
        MBDynData.cpp
        MBDynDrive.cpp
        MBDynDriveCosine.cpp
        MBDynDriveElement.cpp
        MBDynDriveHingeJoint.cpp
        MBDynDriveMeter.cpp
        MBDynDriveRamp.cpp
        MBDynDriveSine.cpp
        MBDynDriveString.cpp
        MBDynElement.cpp
        MBDynForce.cpp
        MBDynGenel.cpp
        MBDynGravity.cpp
        MBDynInitialValue.cpp
        MBDynInLineJoint.cpp
        MBDynInPlaneJoint.cpp
        MBDynItem.cpp
        MBDynJoint.cpp
        MBDynMarker.cpp
        MBDynNode.cpp
        MBDynNodePlugin.cpp
        MBDynOutputMeter.cpp
        MBDynPlugin.cpp
        MBDynPrismaticJoint.cpp
        MBDynReference.cpp
        MBDynRevoluteHingeJoint.cpp
        MBDynRevolutePinJoint.cpp
        MBDynRodJoint.cpp
        MBDynScalarFunction.cpp
        MBDynSphericalHingeJoint.cpp
        MBDynStructural.cpp
        MBDynStructuralDummy.cpp
        MBDynStructuralDynamic.cpp
        MBDynStructuralStatic.cpp
        MBDynSystem.cpp
        MBDynTotalJoint.cpp
        MomentOfInertiaSolver.cpp
        MotionFunctionParser.cpp
        Negative.cpp
        NewtonRaphson.cpp
        NewtonRaphsonError.cpp
        NormalBasicDAEIntegrator.cpp
        NoRotationJoint.cpp
        NotKinematicError.cpp
        Numeric.cpp
        OmeCompIecJecKec.cpp
        OmeCompIecJecKeqc.cpp
        OmeCompIecJecO.cpp
        OmeCompIeqcJecKeqc.cpp
        OmeCompIeqcJecO.cpp
        OmeCompIeqcJeqcKeqc.cpp
        OmeCompIeqcJeqcO.cpp
        OrbitAnglezIecJec.cpp
        OrbitAnglezIeqcJec.cpp
        OrbitAnglezIeqcJeqc.cpp
        Orientation.cpp
        ParallelAxesJoint.cpp
        Part.cpp
        PartFrame.cpp
        PerpendicularJoint.cpp
        PiecewiseFunction.cpp
        PlanarJoint.cpp
        PointInLineJoint.cpp
        PointInPlaneJoint.cpp
        Polynomial.cpp
        PosICDragLimitNewtonRaphson.cpp
        PosICDragNewtonRaphson.cpp
        PosICKineNewtonRaphson.cpp
        PosICNewtonRaphson.cpp
        PosKineNewtonRaphson.cpp
        PosNewtonRaphson.cpp
        PosVelAccData.cpp
        Power.cpp
        PrescribedMotion.cpp
        Product.cpp
        QuasiIntegrator.cpp
        QuasiStaticIntegrator.cpp
        RackPinConstraintIJ.cpp
        RackPinConstraintIqcJc.cpp
        RackPinConstraintIqcJqc.cpp
        RackPinJoint.cpp
        RampStepFunction.cpp
        Reciprocal.cpp
        RedundantConstraint.cpp
        RevCylJoint.cpp
        RevoluteJoint.cpp
        RevRevJoint.cpp
        RotationLimitIJ.cpp
        RowTypeMatrix.cpp
        ScalarNewtonRaphson.cpp
        ScrewConstraintIJ.cpp
        ScrewConstraintIqcJc.cpp
        ScrewConstraintIqcJqc.cpp
        ScrewJoint.cpp
        SimulationStoppingError.cpp
        Sine.cpp
        SingularMatrixError.cpp
        Solver.cpp
        SolverStatistics.cpp
        SparseColumn.cpp
        SparseMatrix.cpp
        SparseRow.cpp
        SparseVector.cpp
        SphericalJoint.cpp
        SphSphJoint.cpp
        StableBackwardDifference.cpp
        StableStartingBDF.cpp
        StartingBasicDAEIntegrator.cpp
        StartingBDF.cpp
        StateData.cpp
        StepFunction.cpp
        Sum.cpp
        Symbolic.cpp
        SymbolicParser.cpp
        SyntaxError.cpp
        System.cpp
        SystemNewtonRaphson.cpp
        SystemSolver.cpp
        SymTime.cpp
        TooManyTriesError.cpp
        TooSmallStepSizeError.cpp
        TorqueBasicComp.cpp
        TorqueBasicVector.cpp
        TorqueVector.cpp
        Transitions.cpp
        Translation.cpp
        TranslationalJoint.cpp
        TranslationConstraintIJ.cpp
        TranslationConstraintIqcJc.cpp
        TranslationConstraintIqcJqc.cpp
        TranslationConstraintIqctJqc.cpp
        TranslationLimitIJ.cpp
        Units.cpp
        UniversalJoint.cpp
        UserFunction.cpp
        Variable.cpp
        VectorNewtonRaphson.cpp
        VelICKineSolver.cpp
        VelICSolver.cpp
        VelKineSolver.cpp
        VelRadIecJec.cpp
        VelRadIeqcJec.cpp
        VelRadIeqcJeqc.cpp
        VelRadIeqctJeqc.cpp
        VelSolver.cpp
        ZRotation.cpp
        ZTranslation.cpp
)

set(FREECADMBD_HEADERS
        Abs.h
        AbsConstraint.h
        AccICKineNewtonRaphson.h
        AccICNewtonRaphson.h
        AccKineNewtonRaphson.h
        AccNewtonRaphson.h
        AllowZRotation.h
        AllowZRotationConstraintIqctJqc.h
        AngleJoint.h
        AngleZConstraintIJ.h
        AngleZConstraintIqcJc.h
        AngleZConstraintIqcJqc.h
        AngleZIecJec.h
        AngleZIeqcJec.h
        AngleZIeqcJeqc.h
        AnyGeneralSpline.h
        AnyPosICNewtonRaphson.h
        ArcSine.h
        ArcTan.h
        ArcTan2.h
        Arguments.h
        Array.h
        ASMTAllowRotation.h
        ASMTAngleIJ.h
        ASMTAngleIJz.h
        ASMTAngleJoint.h
        ASMTAnimationParameters.h
        ASMTAssembly.h
        ASMTAtPointJoint.h
        ASMTCompoundJoint.h
        ASMTConeConeContact.h
        ASMTConstantGravity.h
        ASMTConstantVelocityJoint.h
        ASMTConstraintSet.h
        ASMTContact.h
        ASMTCylConeContact.h
        ASMTCylCylContact.h
        ASMTCylindricalJoint.h
        ASMTCylSphJoint.h
        ASMTdAngleIJx.h
        ASMTdAngleIJy.h
        ASMTExtrusion.h
        ASMTFixedJoint.h
        ASMTForceIJ.h
        ASMTForceIJKi.h
        ASMTForceTorque.h
        ASMTForceTorqueGeneral.h
        ASMTForceTorqueInLine.h
        ASMTGearJoint.h
        ASMTGeneralMotion.h
        ASMTInLineJoint.h
        ASMTInPlaneJoint.h
        ASMTItem.h
        ASMTItemIJ.h
        ASMTJoint.h
        ASMTKinematicIJ.h
        ASMTLimit.h
        ASMTLineInPlaneJoint.h
        ASMTMarker.h
        ASMTMotion.h
        ASMTNoRotationJoint.h
        ASMTOmegaIJ.h
        ASMTOmegaIJKi.h
        ASMTParallelAxesJoint.h
        ASMTPart.h
        ASMTPerpendicularJoint.h
        ASMTPlanarJoint.h
        ASMTPointInLineJoint.h
        ASMTPointInPlaneJoint.h
        ASMTPrincipalMassMarker.h
        ASMTRackPinionJoint.h
        ASMTRefCurve.h
        ASMTRefItem.h
        ASMTRefPoint.h
        ASMTRefSurface.h
        ASMTRevCylJoint.h
        ASMTRevoluteJoint.h
        ASMTRevRevJoint.h
        ASMTrIJ.h
        ASMTrIJKi.h
        ASMTRotationalMotion.h
        ASMTRotationLimit.h
        ASMTScrewJoint.h
        ASMTSimulationParameters.h
        ASMTSpatialContainer.h
        ASMTSpatialItem.h
        ASMTSphericalJoint.h
        ASMTSphSphJoint.h
        ASMTSymbolicFunction.h
        ASMTSymbolicFunctionIJ.h
        ASMTSymbolicFunctionIJKi.h
        ASMTTime.h
        ASMTTorqueIJ.h
        ASMTTorqueIJKi.h
        ASMTTranslationalJoint.h
        ASMTTranslationalMotion.h
        ASMTTranslationLimit.h
        ASMTUniversalJoint.h
        ASMTvIJ.h
        ASMTvIJKi.h
        ASMTvrIJ.h
        AtPointConstraintIJ.h
        AtPointConstraintIqcJc.h
        AtPointConstraintIqcJqc.h
        AtPointConstraintIqctJqc.h
        AtPointJoint.h
        BackwardDifference.h
        BasicDAEIntegrator.h
        BasicIntegrator.h
        BasicQuasiIntegrator.h
        BasicUserFunction.h
        CADSymbolicFunction.h
        CADSystem.h
        CartesianFrame.h
        CompoundJoint.h
        Constant.h
        ConstantGravity.h
        ConstantVelocityJoint.h
        Constraint.h
        ConstraintIJ.h
        ConstraintSet.h
        ConstVelConstraintIJ.h
        ConstVelConstraintIqcJc.h
        ConstVelConstraintIqcJqc.h
        Cosine.h
        CylindricalJoint.h
        CylSphJoint.h
        DAECorrector.h
        DAEIntegrator.h
        DAngleXIecJec.h
        DAngleXIeqcJec.h
        DAngleXIeqcJeqc.h
        DAngleYIecJec.h
        DAngleYIeqcJec.h
        DAngleYIeqcJeqc.h
        DiagonalMatrix.h
        DifferenceOperator.h
        DifferentialAlgebraicEquationSolver.h
        DifferentiatedGeneralSpline.h
        DirectionCosineConstraintIJ.h
        DirectionCosineConstraintIqcJc.h
        DirectionCosineConstraintIqcJqc.h
        DirectionCosineConstraintIqctJqc.h
        DirectionCosineIecJec.h
        DirectionCosineIeqcJec.h
        DirectionCosineIeqcJeqc.h
        DirectionCosineIeqctJeqc.h
        DiscontinuityError.h
        DispCompIecJecIe.h
        DispCompIecJecKec.h
        DispCompIecJecKeqc.h
        DispCompIecJecO.h
        DispCompIeqcJecIe.h
        DispCompIeqcJecKeqc.h
        DispCompIeqcJecO.h
        DispCompIeqcJeqcIe.h
        DispCompIeqcJeqcKeqc.h
        DispCompIeqcJeqcKeqct.h
        DispCompIeqcJeqcO.h
        DispCompIeqctJeqcIe.h
        DispCompIeqctJeqcKeqct.h
        DispCompIeqctJeqcO.h
        DistanceConstraintIJ.h
        DistanceConstraintIqcJc.h
        DistanceConstraintIqcJqc.h
        DistanceConstraintIqctJqc.h
        DistancexyConstraintIJ.h
        DistancexyConstraintIqcJc.h
        DistancexyConstraintIqcJqc.h
        DistIecJec.h
        DistIeqcJec.h
        DistIeqcJeqc.h
        DistIeqctJeqc.h
        DistxyIecJec.h
        DistxyIeqcJec.h
        DistxyIeqcJeqc.h
        DistxyIeqctJeqc.h
        DynIntegrator.h
        EigenDecomposition.h
        EndFramec.h
        EndFrameqc.h
        EndFrameqccq.h
        EndFrameqct.h
        EndFrameqct2.h
        enum.h
        EulerAngles.h
        EulerAnglesDDot.h
        EulerAnglesDot.h
        EulerAngleszxz.h
        EulerAngleszxzDDot.h
        EulerAngleszxzDot.h
        EulerArray.h
        EulerConstraint.h
        EulerParameters.h
        EulerParametersDDot.h
        EulerParametersDot.h
        Exponential.h
        ExpressionX.h
        ExternalSystem.h
        Extrapolator.h
        FixedJoint.h
        ForceBasicqcComp.h
        ForceBasicqccqComp.h
        ForceBasicqccqVector.h
        ForceBasicqcsComp.h
        ForceBasicqcsVector.h
        ForceBasicqcVector.h
        ForceFunctionParser.h
        ForceTorqueAction.h
        ForceTorqueActionComp.h
        ForceTorqueActionInLine.h
        ForceTorqueActionKComp.h
        ForceTorqueActionOComp.h
        ForceTorqueActReact.h
        ForceTorqueActReactComp.h
        ForceTorqueActReactInLine.h
        ForceTorqueActReactKComp.h
        ForceTorqueActReactOComp.h
        ForceTorqueBasic.h
        ForceTorqueData.h
        ForceTorqueFunction.h
        ForceTorqueGeneral.h
        ForceTorqueIJ.h
        ForceTorqueInLine.h
        ForceTorqueItem.h
        ForceTorqueVector.h
        ForceTorqueZero.h
        ForceVector.h
        FullColumn.h
        FullMatrix.h
        FullMotion.h
        FullRow.h
        FullVector.h
        Function.h
        FunctionFromData.h
        FunctionParser.h
        Functions.h
        FunctionWithManyArgs.h
        FunctionX.h
        FunctionXcParameter.h
        FunctionXY.h
        GearConstraintIJ.h
        GearConstraintIqcJc.h
        GearConstraintIqcJqc.h
        GearJoint.h
        GEFullMat.h
        GEFullMatFullPv.h
        GEFullMatParPv.h
        GeneralSpline.h
        GESpMat.h
        GESpMatFullPv.h
        GESpMatFullPvPosIC.h
        GESpMatParPv.h
        GESpMatParPvMarko.h
        GESpMatParPvMarkoFast.h
        GESpMatParPvPrecise.h
        ICKineIntegrator.h
        IndependentVariable.h
        InLineJoint.h
        InPlaneJoint.h
        Integral.h
        Integrator.h
        IntegratorInterface.h
        Interpolator.h
        Item.h
        JointIJ.h
        KineIntegrator.h
        KinematicDotIJ.h
        Kinematic.h
        KinematicIJ.h
        LDUFullMat.h
        LDUFullMatParPv.h
        LDUFullMatParPvRobust.h
        LDUSpMat.h
        LDUSpMatParPv.h
        LDUSpMatParPvMarko.h
        LDUSpMatParPvPrecise.h
        LimitIJ.h
        LinearMultiStepMethod.h
        LineInPlaneJoint.h
        Ln.h
        Log10.h
        LogN.h
        MarkerFrame.h
        MatrixDecomposition.h
        MatrixGaussElimination.h
        MatrixLDU.h
        MatrixSolver.h
        MaximumIterationError.h
        MbDMath.h
        MbDSymbolicFunction.h
        MBDynAbsoluteForce.h
        MBDynAxialRotationJoint.h
        MBDynBlock.h
        MBDynBody.h
        MBDynClampGenel.h
        MBDynClampJoint.h
        MBDynControlData.h
        MBDynData.h
        MBDynDrive.h
        MBDynDriveCosine.h
        MBDynDriveElement.h
        MBDynDriveHingeJoint.h
        MBDynDriveMeter.h
        MBDynDriveRamp.h
        MBDynDriveSine.h
        MBDynDriveString.h
        MBDynElement.h
        MBDynForce.h
        MBDynGenel.h
        MBDynGravity.h
        MBDynInitialValue.h
        MBDynInLineJoint.h
        MBDynInPlaneJoint.h
        MBDynItem.h
        MBDynJoint.h
        MBDynMarker.h
        MBDynNode.h
        MBDynNodePlugin.h
        MBDynOutputMeter.h
        MBDynPlugin.h
        MBDynPrismaticJoint.h
        MBDynReference.h
        MBDynRevoluteHingeJoint.h
        MBDynRevolutePinJoint.h
        MBDynRodJoint.h
        MBDynScalarFunction.h
        MBDynSphericalHingeJoint.h
        MBDynStructural.h
        MBDynStructuralDummy.h
        MBDynStructuralDynamic.h
        MBDynStructuralStatic.h
        MBDynSystem.h
        MBDynTotalJoint.h
        MomentOfInertiaSolver.h
        MotionFunctionParser.h
        Negative.h
        NewtonRaphson.h
        NewtonRaphsonError.h
        NormalBasicDAEIntegrator.h
        NoRotationJoint.h
        NotKinematicError.h
        Numeric.h
        OmeCompIecJecKec.h
        OmeCompIecJecKeqc.h
        OmeCompIecJecO.h
        OmeCompIeqcJecKeqc.h
        OmeCompIeqcJecO.h
        OmeCompIeqcJeqcKeqc.h
        OmeCompIeqcJeqcO.h
        OrbitAnglezIecJec.h
        OrbitAnglezIeqcJec.h
        OrbitAnglezIeqcJeqc.h
        Orientation.h
        ParallelAxesJoint.h
        Part.h
        PartFrame.h
        PerpendicularJoint.h
        PiecewiseFunction.h
        PlanarJoint.h
        PointInLineJoint.h
        PointInPlaneJoint.h
        Polynomial.h
        PosICDragLimitNewtonRaphson.h
        PosICDragNewtonRaphson.h
        PosICKineNewtonRaphson.h
        PosICNewtonRaphson.h
        PosKineNewtonRaphson.h
        PosNewtonRaphson.h
        PosVelAccData.h
        Power.h
        PrescribedMotion.h
        Product.h
        QuasiIntegrator.h
        QuasiStaticIntegrator.h
        RackPinConstraintIJ.h
        RackPinConstraintIqcJc.h
        RackPinConstraintIqcJqc.h
        RackPinJoint.h
        RampStepFunction.h
        Reciprocal.h
        RedundantConstraint.h
        resource.h
        RevCylJoint.h
        RevoluteJoint.h
        RevRevJoint.h
        RotationLimitIJ.h
        RowTypeMatrix.h
        ScalarNewtonRaphson.h
        ScrewConstraintIJ.h
        ScrewConstraintIqcJc.h
        ScrewConstraintIqcJqc.h
        ScrewJoint.h
        SimulationStoppingError.h
        Sine.h
        SingularMatrixError.h
        Solver.h
        SolverStatistics.h
        SparseColumn.h
        SparseMatrix.h
        SparseRow.h
        SparseVector.h
        SphericalJoint.h
        SphSphJoint.h
        StableBackwardDifference.h
        StableStartingBDF.h
        StartingBasicDAEIntegrator.h
        StartingBDF.h
        StateData.h
        StepFunction.h
        Sum.h
        Symbolic.h
        SymbolicParser.h
        SyntaxError.h
        System.h
        SystemNewtonRaphson.h
        SystemSolver.h
        SymTime.h
        TooManyTriesError.h
        TooSmallStepSizeError.h
        TorqueBasicComp.h
        TorqueBasicVector.h
        TorqueVector.h
        Transitions.h
        Translation.h
        TranslationalJoint.h
        TranslationConstraintIJ.h
        TranslationConstraintIqcJc.h
        TranslationConstraintIqcJqc.h
        TranslationConstraintIqctJqc.h
        TranslationLimitIJ.h
        Units.h
        UniversalJoint.h
        UserFunction.h
        Variable.h
        VectorNewtonRaphson.h
        VelICKineSolver.h
        VelICSolver.h
        VelKineSolver.h
        VelRadIecJec.h
        VelRadIeqcJec.h
        VelRadIeqcJeqc.h
        VelRadIeqctJeqc.h
        VelSolver.h
        ZRotation.h
        ZTranslation.h
)

target_sources(FreeCADMbD PRIVATE
        "${FREECADMBD_SRC}"
        "${FREECADMBD_HEADERS}")

set_target_properties(FreeCADMbD
        PROPERTIES VERSION ${PROJECT_VERSION}
        SOVERSION 1
        PUBLIC_HEADER "${FREECADMBD_HEADERS}"
)

if(WIN32)
    target_compile_definitions(FreeCADMbD PRIVATE _USE_MATH_DEFINES)
endif(WIN32)

configure_file(../FreeCADMbD.pc.in ${CMAKE_BINARY_DIR}/FreeCADMbD.pc @ONLY)
install(TARGETS FreeCADMbD
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/FreeCADMbD)
install(FILES ${CMAKE_BINARY_DIR}/FreeCADMbD.pc
        DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig)
